# fluidsynth-hs-complete

./: .gitignore  HLint.hs  fluidsynth-complete.cabal  fluidsynth-hs-complete.cabal
experiments/several-audio-drivers/: several-audio-drivers.c
src/Sound/: Fluidsynth.hs
src/Sound/Fluidsynth/: Audio.hs  Event.hs  Gen.hs  Log.hs  Midi.hs  Misc.hs  Mod.hs  Settings.hs  Synth.hs  Types.hs
src/Sound/Fluidsynth/Internal/: Event.hs  Types.hs
src/Sound/Fluidsynth/Internal/FFI/: Audio.hsc  Event.hsc  Gen.hsc  Log.hsc  Midi.hsc  Misc.hsc  Mod.hsc  Ramsfont.hsc  Seq.hsc  Seqbind.hsc  Settings.hsc  Sfont.hsc  Shell.hsc  Synth.hsc  Types.hsc  Version.hsc  Voice.hsc
