name:                fluidsynth-hs-complete
version:             0.0.0
synopsis:            Haskell bindings to FluidSynth library
author:              Alexander Shabalin
build-type:          Simple
cabal-version:       >= 1.10
category:            Sound
description:         A complete(not yet) bindings to FluidSynth library version 1.1.6
homepage:            https://github.com/projedi/fluidsynth-hs-complete
license:             BSD3
license-file:        LICENSE
maintainer:          shabalyn.a@gmail.com

library
  build-depends:     base >= 4.6 && < 5
                   , bindings-DSL >= 1.0.21 && < 1.1
                   , containers >= 0.5.5.1 && < 0.6
                   , lens >= 4.1.2 && < 4.2
                   , mtl >= 2.1.3 && < 2.2
  default-language:  Haskell2010
  exposed-modules:   Sound.Fluidsynth
                   , Sound.Fluidsynth.Audio
                   , Sound.Fluidsynth.Event
                   , Sound.Fluidsynth.Log
                   , Sound.Fluidsynth.Midi
                   , Sound.Fluidsynth.Misc
                   , Sound.Fluidsynth.Settings
                   , Sound.Fluidsynth.Synth
                   , Sound.Fluidsynth.Types
  extra-libraries:   fluidsynth
  ghc-options:       -Wall -fwarn-tabs -fwarn-incomplete-record-updates
                     -fwarn-monomorphism-restriction -fwarn-unused-do-bind
  hs-source-dirs:    src/
  other-modules:     Sound.Fluidsynth.Internal.FFI.Audio
                   , Sound.Fluidsynth.Internal.FFI.Event
                   , Sound.Fluidsynth.Internal.FFI.Gen
                   , Sound.Fluidsynth.Internal.FFI.Log
                   , Sound.Fluidsynth.Internal.FFI.Midi
                   , Sound.Fluidsynth.Internal.FFI.Misc
                   , Sound.Fluidsynth.Internal.FFI.Mod
                   , Sound.Fluidsynth.Internal.FFI.Ramsfont
                   , Sound.Fluidsynth.Internal.FFI.Seq
                   , Sound.Fluidsynth.Internal.FFI.Seqbind
                   , Sound.Fluidsynth.Internal.FFI.Settings
                   , Sound.Fluidsynth.Internal.FFI.Sfont
                   , Sound.Fluidsynth.Internal.FFI.Shell
                   , Sound.Fluidsynth.Internal.FFI.Synth
                   , Sound.Fluidsynth.Internal.FFI.Types
                   , Sound.Fluidsynth.Internal.FFI.Version
                   , Sound.Fluidsynth.Internal.FFI.Voice
                   , Sound.Fluidsynth.Internal.Event
                   , Sound.Fluidsynth.Internal.Types
